--- a/Release/changelog.txt
+++ b/Release/changelog.txt
@@ -1,10 +1,12 @@
 ﻿Changelog (Alpha v0.05 >> Alpha v0.10)
 Графика:
 - Переработан интерфейс
+- Переработана система теней
 - Снаряды теперь имеют тени
 - Улучшено качество шрифтов
 - Добавлена поддержка шейдерных эффектов
 - Добавлена поддержка восьминаправленной анимации персонажей
+- Добавлен эффект при перемещении камеры
 Геймплей:
 - Добавлена игровая валюта
 - Переработано управление персонажем
@@ -23,9 +25,6 @@
 Исправления:
 - Устранены многие критические ошибки
 - Восстановлена работоспособность сетевой игры
-
-Known issues (Alpha v0.10)
-- Прозрачность инвентаря не изменяется со временем
 
 
 Changelog (Alpha v0.04 >> Alpha v0.05)
