Working with items #1
- [Added] Support for non-consumed craft recipe components
- [Added] Recipes now check if all the item IDs are correct
- [Added] Some basic items

--- a/Release/changelog.txt
+++ b/Release/changelog.txt
@@ -19,6 +19,8 @@
 - Переработана сетевая игра
 - Переработана система инвентаря
 - Переработана система освещения
+- Переработана система генерации мира
+- Переработана система загрузки и сохранения мира
 - Улучшена производительность движка
 - Добавлена поддержка многопоточности
 - Добавлена поддержка любых разрешений экрана
