--- a/Release/changelog.txt
+++ b/Release/changelog.txt
@@ -11,6 +11,7 @@
 - Добавлена игровая валюта
 - Переработано управление персонажем
 - Добавлена поддержка летающих существ
+- Добавлена поддержка рецептов с одинаковыми ингредиентами
 Движок:
 - Реализована система поиска пути
 - Реализована система активных умений / предметов
@@ -24,6 +25,8 @@
 - Улучшена производительность движка
 - Добавлена поддержка многопоточности
 - Добавлена поддержка любых разрешений экрана
+- Улучшена система скриптов
+- Добавлена возможность переназначать клавиши управления
 Исправления:
 - Устранены многие критические ошибки
 - Восстановлена работоспособность сетевой игры
