--- a/Release/changelog.txt
+++ b/Release/changelog.txt
@@ -27,6 +27,7 @@
 - Добавлена поддержка любых разрешений экрана
 - Улучшена система скриптов
 - Добавлена возможность переназначать клавиши управления
+- Добавлена графическая консоль
 Исправления:
 - Устранены многие критические ошибки
 - Восстановлена работоспособность сетевой игры
