--- a/Release/changelog.txt
+++ b/Release/changelog.txt
@@ -24,13 +24,14 @@
 - Переработана система загрузки и сохранения мира
 - Улучшена производительность движка
 - Улучшена система скриптов
+- Улучшена система строительства
+- Улучшена система прицеливания
 - Добавлена поддержка многопоточности
 - Добавлена поддержка любых разрешений экрана
 - Добавлена возможность переназначать клавиши управления
 - Добавлена графическая консоль
 Исправления:
 - Устранены многие критические ошибки
-- Восстановлена работоспособность сетевой игры
 
 
 Changelog (Alpha v0.04 >> Alpha v0.05)
