--- a/Release/changelog.txt
+++ b/Release/changelog.txt
@@ -4,6 +4,7 @@
 - Переработана система теней
 - Снаряды теперь имеют тени
 - Улучшено качество шрифтов
+- Улучшено главное меню
 - Добавлена поддержка шейдерных эффектов
 - Добавлена поддержка восьминаправленной анимации персонажей
 - Добавлен эффект при перемещении камеры
@@ -12,6 +13,7 @@
 - Добавлена игровая валюта
 - Добавлена поддержка летающих существ
 - Добавлена поддержка рецептов с одинаковыми ингредиентами
+- Добавлена возможность складывать и переносить временное убежище
 Движок:
 - Реализована система поиска пути
 - Реализована система активных умений / предметов
