--- a/Release/changelog.txt
+++ b/Release/changelog.txt
@@ -1,10 +1,11 @@
-﻿Changelog (Alpha v0.05 >> Alpha v0.10)
+﻿Changelog (Alpha v0.05 >> Beta v0.10)
 Графика:
 - Переработан интерфейс
 - Переработана система теней
 - Снаряды теперь имеют тени
 - Улучшено качество шрифтов
 - Улучшено главное меню
+- Улучшены системы погоды
 - Добавлена поддержка шейдерных эффектов
 - Добавлена поддержка восьминаправленной анимации персонажей
 - Добавлен эффект при перемещении камеры
@@ -33,7 +34,8 @@
 - Добавлена возможность переназначать клавиши управления
 - Добавлена графическая консоль
 Исправления:
-- Устранены многие критические ошибки
+- Устранены все старые ошибки
+- Добавлены новые, как всегда
 
 
 Changelog (Alpha v0.04 >> Alpha v0.05)
